feature/6.7/DOC-2171_TINY-9969: tableofcontents_header.adoc
Missing standard comment in code sample no longer missing.

--- a/modules/ROOT/partials/configuration/tableofcontents_header.adoc
+++ b/modules/ROOT/partials/configuration/tableofcontents_header.adoc
@@ -12,7 +12,7 @@ Table of contents has a header and by default it will be marked up with `+H2+` t
 [source,js]
 ----
 tinymce.init({
-  selector: 'textarea',
+  selector: 'textarea', // change this value according to your HTML
   plugins: 'tableofcontents',
   toolbar: 'tableofcontents',
   tableofcontents_header: 'div' // case doesn't matter
