--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -71,9 +71,22 @@ The {productname} 6.7.0 release includes an accompanying release of the **Advanc
 ==== New AdvTemplateInsertTemplateById command to insert the template specified by its id property value
 // TINY-9976
 
+**Advanced Templates** 1.3.0 includes a new command, `AdvTemplateInsertTemplateById`.
+
+This command enables the adding of a new template, specified by its ID, to a {productname} document.
+
+See the xref:advanced-templates.adoc#commands[Commands] section of the xref:advanced-templates.adoc[Advanced Templates] documentation for an example of the command in use.
+
 ==== New {{mce-cursor}} marker to indicate the cursor position after the template is inserted
 // TINY-9973
 
+The new insertion point marker is a fixed string for adding to any template.
+
+The string to add is as follows: `+{{mce-cursor}}+`.
+
+Wherever this string is within a template is where the insertion point appears when that template is added to a {productname} document.
+
+For more information, and an interactive demonstration, see the xref:advanced-templates.adoc#the-insertion-point-marker[The Insertion Point Marker] section of the xref:advanced-templates.adoc[Advanced Templates] documentation.
 
 
 === AI Assistant 1.1.0
