--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -156,7 +156,7 @@ The {productname} 6.7.0 release includes an accompanying release of the **PowerP
 // TINY-9975
 Previously, when a copied selection from a Microsoft Word document included comments, these comments were, added to the {productname} document as footnotes when the selection was pasted in to place.
 
-**PowerPaste** 6.2.1 addresses this. Comments are still included in copied selections from Microsoft Word. With this upate, however, they are ignored by the plugin and, consequently, not added to {productname} documents when pasted.
+**PowerPaste** 6.2.1 addresses this. Comments are still included in copied selections from Microsoft Word. With this update, however, they are ignored by the plugin and, consequently, not added to {productname} documents when pasted.
 
 ==== Removed error condition, error message, and error message translations for an error which no longer occurs.
 // TINY-10045
