--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -226,30 +226,98 @@ The {productname} 6.7.0 release includes an accompanying release of the **Table 
 
 **Table of Contents** 1.2.0 includes the following improvements and bug-fixes:
 
-==== Added new boolean option tableofcontents_includeheader to control whether a header is included in the table of contents. Defaults to true.
+
+==== Added new boolean option, `tableofcontents_includeheader`, to control whether a header is included
 // TINY-9970
 
+**Table of Contents** 1.2.0 includes a new option, `tableofcontents_includeheader`.
 
-==== Added new boolean option tableofcontents_orderedlist to use ordered lists instead of unordered lists in the table of contents.
+This option is set to `true` by default.
+
+When set to `false`, this option removes the header string, **Table of Content**, from the rendered Table of Contents.
+
+
+==== Added new boolean option, `tableofcontents_orderedlist`, to use ordered lists instead of unordered lists
 // TINY-9968
 
+**Table of Contents 1.2.0** includes a new option, `tableofcontents_orderedlist`.
 
-==== Added new option tableofcontents_orderedlist_type to set a specific type of ordered list, defaulting to a numeric ordered list.
+This option is set to `false` by default.
+
+When set to `true`, this option renders a Table of Contents as an ordered list instead of the default unordered list.
+
+
+==== Added new option, `tableofcontents_orderedlist_type` to set a specific type of ordered list
 // TINY-9969
 
+**Table of Contents 1.2.0** includes a new option, `tableofcontents_orderedlist_type`.
 
-==== ToC toolbar button and menu item are now disabled when the selection is not editable
+When set to one of its available values, this option renders the table of contents as the specified type of ordered list rather than the default unordered list.
+
+This option takes one of the following values to set the type attribute of the ordered list, `<ol>`:
+
+[cols="10%,90%"]
+|===
+|Value | Ordered list type
+
+|`+'1'+`
+|A list sorted by Arabic/Hindu numerals.
+
+This is the default.
+
+|`+'A'+`
+|A list sorted alphabetically by capital letter.
+
+|`+'a'+`
+|A list sorted alphabetically by lowercase letter.
+
+|`+'I'+`
+|A list sorted by uppercase Roman numerals.
+
+|`+'i'+`
+|A list sorted by lowercase Roman numerals.
+|===
+
+[IMPORTANT]
+====
+The `tableofcontents_orderedlist: true` option must be present in a {productname} configuration for whatever `tableofcontents_orderedlist_type` setting to come into effect.
+====
+
+
+==== Table of Contents toolbar button and menu item are now disabled when the selection is not editable
 // TINY-9890
 
+Previously, the Table of Contents toolbar button and menu item were not disabled when the insertion point was within a read-only (ie, non-editable) section or when the selection was within a read-only section or included a read-only portion.
 
-==== Empty headers would be included in table of content.
+Clicking the enabled button, or choosing the enabled menu item did not generate a Table of Contents. The commands were disabled, as expected. The UI objects did not, however, present as disabled.
+
+**Table of Contents 1.2.0** addresses this. If the selection includes or is within a read-only section, or if the insertion point is within a read-only section, the Table of Contents UI objects now, correctly, present as disabled.
+
+
+==== Empty headers would be included in table of content
 // TINY-9862
 
+Previously, the **Table of Contents** plugin included all header blocks in a generated Table of Contents, including empty header blocks.
 
-==== Changes to the ToC title were overwritten using the update button.
+These empty header blocks were presented, in the generated Table of Contents, as an underline character.
+
+**Table of Contents 1.2.0** addresses this by filtering out empty header blocks when it generates a Table of Contents section.
+
+[IMPORTANT]
+====
+For filtering purposes, the plugin treats a header block which contains non-printing characters, such as spaces, as **not** empty.
+====
+
+==== Changes to the Table of Contents title were overwritten by the update button.
 // TINY-9971
 
+By default, a generated Table of Contents includes a title, **Table of Contents**. This title can be edited.
 
+Previously, however, if a particular Table of Contents was re-generated using the update button, the default title was restored and the edited title was lost.
+
+In **Table of Contents** 1.2.0, edits to the Table of Contents title are respected. When a given Table of Contents, which includes an edited title, is re-generated, the edited title is preserved.
+
+For information on the **Table of Contents** plugin, see: xref:tableofcontents.adoc[Table of Contents].
 
 
 
