--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -47,7 +47,17 @@ When this alert presents, if the currently set language is one of the xref:bundl
 
 The {productname} 6.7.0 release includes an accompanying release of the **Advanced Code** premium plugin.
 
-**Advanced Code** 3.3.1 includes the following bug fix:
+**Advanced Code** 3.3.1 includes the following improvement and bugfix:
+
+==== Going back from a view to the editor in mobile caused an error.
+// TINY-10003
+In previous versions of {productname}, the toolbar implemented for mobile lacked the essential refresh API.
+
+Consequently, when switching from the **Advanced Code** view back to the editor, {productname} triggered an unintended refresh operation, leading to a TypeError to display within the console.
+
+**Advanced Code** 3.3.1 addresses this issue, by integrating an empty refresh API into the mobile toolbar.
+
+With this fix, the refresh API is now invoked, and the console no longer throws the TypeError when transitioning from the **Advanced Code** view back to editor mode on Android tablets.
 
 ==== Editing the data before switching theme would mean a loss of edited data
 // TINY-10046
@@ -59,7 +69,6 @@ This resulted in the loss of any entered data.
 In **Advanced Code** 3.3.1, switching between themes now sets the data state to the current state before the theme switch is made.
 
 This ensures any data entered before switching themes is kept.
-
 
 
 === Advanced Templates 1.3.0
